--- a/akka-demaid/build.gradle
+++ b/akka-demaid/build.gradle
@@ -10,6 +10,7 @@ repositories {
 
 dependencies {
 	compile project(":akka-db")
+    compile 'com.syncthemall:boilerpipe:1.2.2'
 //    compile 'com.typesafe.akka:akka-actor_2.12:2.5.3'
 //    compile 'com.typesafe.akka:akka-remote_2.12:2.5.16'
 //    compile 'org.scala-lang.modules:scala-java8-compat_2.12:0.9.0'
